--- a/Final.rmd
+++ b/Final.rmd
@@ -46,7 +46,21 @@ basicCC + geom_bar(stat="identity", position = "dodge")
 ```
 
 
+This plot represents the population of guys(males) people and the relationship of covid-19 by either taking the vaccine or the placebo. 
 
+
+The plot shows covid19 being very low with those that took the vaccine in comparison to those with the placebo. The Placebo compared to the vaccine is about 3:1 in size.
+
+
+### Numerical results
+
+```{r}
+table1 <- xtabs(~infected + treatment, data=guy)
+rowPerc(table1)
+colPerc(table1)
+```
+
+The males had a low percentage of 26.2% of males who got covid19 after taking the vaccine. Compared to those without a vaccine with 73.8% getting covid19. The vaccine is looking very promising.
 
 
 
