--- a/Final.rmd
+++ b/Final.rmd
@@ -78,8 +78,22 @@ guysfish
 The information to play close attention to among all of these results is the output of the Fisher's Exact test. The p-value displayed above is extremely small at 2.2e-16. Seeing this number means that these results are not likely to occur by chance.
 
 Our odds ratio of about 2.8 proves that this vaccine is effective in stopping covid19 compared to a placebo.
+```{r}
+effect <- guysfish$p.value/(guysfish$p.value +1)
+effectivenessguy = guysfish$estimate/(guysfish$estimate +1)*100
+print(effectivenessguy)
+```
+
+```{r}
+low=(guysfish$conf.int[1]/(guysfish$conf.int[1] +1))*100
+hi=(guysfish$conf.int[2]/(guysfish$conf.int[2] +1))*100
+options(digits=2)
+```
+
+## Effectiveness Confidence Interval `r low`  to `r hi`
 
 
+The odds ratio of the males with vaccines vs those with placebos has a ratio greater than 70 maeaning we have a effective vaccine for males. 
 
 ## Females
 
