--- a/Final.rmd
+++ b/Final.rmd
@@ -187,6 +187,25 @@ colPerc(table1)
 These numerical results show specific percentages of gay individuals that got covid-19 after taking the placebo and taking the vaccine. 
 The gay population in this data have shown to have 20% of those with a vaccine getting infected and 80% with a placebo got infected. Meaning the vaccine is amazing for the gay population.
 
+### Inferential 
+
+
+
+
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+gaysfish <- fisher.test(table1)
+gaysfish
+```
+
+
+The p-value is 0.00000007. This in an incredibly small number and with that being said, the conclusion is that these results show that something is happening.
+
+The Fishers's Exact Test illustrates that the odds ratio is 4.3
+Proving that this vaccine is very effective.
+
+
 
 ## Druggies
 
