--- a/Final.rmd
+++ b/Final.rmd
@@ -224,6 +224,22 @@ Above is the effectiveness for the covid-19 for those who identified as gay.
 The odds ratio is 81 which is the highest we have seen in all data points so far. This is a extremely good vaccine for those that are gay.
 
 ## Druggies
+### Barplot
+
+
+```{r}
+Druggies <-  Druguser %>% group_by(infected,treatment) %>% summarize(count=n()) %>% mutate(prcnt=count/sum(count))
+
+basicC <- ggplot(Druggies,aes(x=infected,y=count,fill=treatment))
+basicC + geom_bar(stat="identity",position="dodge")
+
+basicCC <- ggplot(Druggies,aes(x=infected,y=prcnt*100,fill=treatment)) 
+basicCC + geom_bar(stat="identity", position = "dodge")
+```
+
+This plot represents the population of people who answered  Druguser to drug use and the relationship to the contraction of covid-19 while taking either the vaccine or the placebo.
+
+Those who are drug users who took the vaccine had about 80% infection compared to those who took a placebo had about 8% infected. This is a ration of 1:10. 
 
 
 # Overall Results and Conclusions
