--- a/Final.rmd
+++ b/Final.rmd
@@ -254,5 +254,23 @@ colPerc(table1)
 These numerical results show specific percentages of drugusers that got covid-19 after taking the placebo and taking the vaccine.
 Drugusers had a percentage of 91.7% having the vaccine who got infected. Compared to those with a placebo who had 8.3% got infected. This looks like a horrible vaccine for drugusers to take.
 
+### Inferential 
+
+
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+drugfish <- fisher.test(table1)
+drugfish
+```
+
+
+The p-value is 0.000000000003. This in a small number and with that being said, Meaaing something is happening in this graph.
+
+The Fishers's Exact Test illustrates that the odds ratio is 0.087
+This shows that the vaccine is horrible and should never be used for drug users especially with how small the odds ratio is.
+
+
+
 
 # Overall Results and Conclusions
